<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ACTIVITYS.SignUpActivity"
    android:id="@+id/activitySignUp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_top"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/signup_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/style_title_login"
        android:text="@string/title_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/img_top"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/img_content"
        android:layout_width="252dp"
        android:layout_height="248dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_user_sign_up"
        style="@style/style_text_input_layout_account"
        app:startIconDrawable="@drawable/user"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_content"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_user"
            style="@style/style_text_input_edit_text_account"
            android:hint="@string/hint_input_account_2"
            android:inputType="text"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_pass_sign_up"
        style="@style/style_text_input_layout_account"
        android:layout_marginTop="15dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#888888"
        app:startIconDrawable="@drawable/padlock"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_user_sign_up"
     >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pass"
            style="@style/style_text_input_edit_text_account"
            android:hint="@string/hint_input_pass"
            android:inputType="textPassword"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_sign_up"
        style="@style/style_button_login_account"
        android:text="@string/title_signup"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_pass_sign_up" />

    <ImageView
        android:id="@+id/img_clock"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/clock"
        android:layout_marginTop="60dp"

        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_pass_sign_up" />
    <TextView
        android:id="@+id/text_content1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/signup_content1"
        android:layout_marginTop="30dp"
        android:textSize="13dp"
        android:textColor="#5B2B8A"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

    <TextView
        android:id="@+id/tv_sign_in"
        style="@style/style_text_view_login"
        android:text="@string/signup_content2"
        android:layout_marginTop="25dp"


        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_content1"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#CEABF3"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/text_content1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_content3"
        android:textColor="#6B359F"
        android:textStyle="bold"
        android:paddingHorizontal="10dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/text_content1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageButton
        android:id="@+id/ic_fb"
        style="@style/style_img_button_sign_in"
        android:src="@drawable/ic_facebook"

        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <ImageButton
        android:id="@+id/ic_gg"
        style="@style/style_img_button_sign_in"
        android:src="@drawable/ic_google_plus"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <ImageButton
        android:id="@+id/ic_twitter"
        style="@style/style_img_button_sign_in"
        android:src="@drawable/ic_twitter"

        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

</androidx.constraintlayout.widget.ConstraintLayout>